# memcheck

./: .gitignore  CMakeLists.txt  DebugOutput.h  debugoutput.h  main.cpp
memcheck/: CMakeLists.txt  checkmem.cpp  checkmem.h  memglobal.cpp  memglobal.h
